feat(tailwind): setup tailwind css

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
+        "autoprefixer": "^10.4.21",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^3.4.17",
         "vue": "^3.5.17"
     }
 }
